--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "material-ui": "next",
+    "material-ui-icons": "^1.0.0-beta.36",
     "node-sass-chokidar": "^1.2.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
