--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node-sass-chokidar": "^1.2.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
