--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.18.0",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.22.0",
     "node-sass-chokidar": "^1.2.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-moment": "^0.7.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
