--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "moment": "^2.22.0",
     "node-sass-chokidar": "^1.2.2",
     "react": "^16.3.0",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.0",
     "react-moment": "^0.7.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
