--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.5",
     "material-ui": "next",
     "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.22.0",
